내차판매 보험이력, 수리 이력, 검증 데이터 안들어가는거 수정